--- a/charts/Chart.yaml
+++ b/charts/Chart.yaml
@@ -1,24 +1,19 @@
 apiVersion: v2
-name: dummy
-description: A Helm chart for Kubernetes
-
-# A chart can be either an 'application' or a 'library' chart.
-#
-# Application charts are a collection of templates that can be packaged into versioned archives
-# to be deployed.
-#
-# Library charts provide useful utilities or functions for the chart developer. They're included as
-# a dependency of application charts to inject those utilities and functions into the rendering
-# pipeline. Library charts do not define any templates and therefore cannot be deployed.
+name: redis-proxy
+description: A lightweight redis proxy daemonset built on the SOCAT relay
 type: application
-
-# This is the chart version. This version number should be incremented each time you make changes
-# to the chart and its templates, including the app version.
-# Versions are expected to follow Semantic Versioning (https://semver.org/)
-version: 0.2.0
-
-# This is the version number of the application being deployed. This version number should be
-# incremented each time you make changes to the application. Versions are not expected to
-# follow Semantic Versioning. They should reflect the version the application is using.
-# It is recommended to use it with quotes.
-appVersion: "1.16.0"
+version: 0.1.0
+appVersion: "1.7.4.2-r0"
+keywords:
+  - redis
+  - socat
+  - proxy
+  - tuneller
+  - relay
+home: http://www.dest-unreach.org/socat/
+sources:
+  - https://github.com/colinwilson/helm-charts/tree/release/charts/redis-proxy
+maintainers:
+  - name: colinwilson
+    email: colin@aigis.uk
+icon: https://res.cloudinary.com/qunux/image/upload/v1643320066/isometric_redis_proxy_icon_nmf5dm.png
