--- a/charts/Chart.yaml
+++ b/charts/Chart.yaml
@@ -2,8 +2,8 @@ apiVersion: v2
 name: redis-proxy
 description: A lightweight redis proxy daemonset built on the SOCAT relay
 type: application
-version: 0.1.1
-appVersion: "1.7.4.2-r0"
+version: "0.1.1"
+appVersion: "0.2.0"
 keywords:
   - redis
   - socat
