--- a/.github/workflows/helm-workflow.yml
+++ b/.github/workflows/helm-workflow.yml
@@ -23,7 +23,7 @@ jobs:
 
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.5.0
-	      with:
-          charts_dir: .
+        with:
+          chart_dir: pwd
         env:
           CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
